<resources>
    <string name="app_name">Inventory App Final</string>
    <string name="action_settings">Settings</string>
    <string name="WelcomeUser">Welcome</string>
    <string name="InvalidPassword">Password must be at least 5 characters.</string>
    <string name="InventoryAppText">Inventory App</string>
    <string name="UsernameText">Username</string>
    <string name="PasswordText">Password</string>
    <string name="AddItemText">Add item</string>
    <string name="AddItemNumber">Item Number</string>
    <string name="AddItemName">Item Name</string>
    <string name="AddItemQuantity">Item Quantity</string>
    <string name="RemoveItemText">Remove Item</string>
    <string name="UpdateQuantityText">Update Quantity</string>
    <string name="NewQuantityNum">New Item Quantity</string>

    <!-- Strings for buttons used -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delAccount">Delete Account</string>
    <string name="CreateAccount">Create an Account</string>
    <string name="AddItemBtn">Add Item</string>
    <string name="RemoveItemBtn">Remove Item</string>
    <string name="ConfirmBtn">Confirm</string>
    <string name="UpdateQuantity">Update Quantity</string>
    <string name="Cancel">Cancel</string>
    <string name="SignInOrCreateAcc">Sign in or Create Account</string>


    <string name="phone_number">Phone Number</string>
    <string name="want_to_enable_sms_notfications">Want to enable SMS Notfications?</string>
    <string name="settings">Settings</string>
</resources>